--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width,initial-scale=1.0" name="viewport"/>
     <meta content="telephone=no" name="format-detection"/>
     <meta content="address=no" name="format-detection"/>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/lib/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/lib/css/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="modules/css/base.less" />
