--- a/modules/html/nav/nav.html
+++ b/modules/html/nav/nav.html
@@ -5,7 +5,7 @@
         <ul>
             <li><a href="#home-section" class="nav-home">首頁</a></li>
             <li><a href="#about-section" class="nav-about">關於我們</a></li>
-            <li><a href="#course-section" class="nav-course">課程訓練</a></li>
+            <li><a href="#course-section" class="nav-course">訓練課程</a></li>
             <li><a href="#contact-section" class="nav-contact">聯系我們</a></li>
         </ul>
     </div>
