--- a/modules/html/home/course/course.html
+++ b/modules/html/home/course/course.html
@@ -2,7 +2,8 @@
     <h2 class="t-cn">訓練課程</h2>
     <h2 class="t-en">COURSES</h2>
     <div class="carousel-outer layout-row">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!--data-ride="carousel"-->
+        <div id="carousel-example-generic" class="carousel slide">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
