--- a/modules/html/home/home/home.html
+++ b/modules/html/home/home/home.html
@@ -1,4 +1,9 @@
 <section class="home-section" id="home-section">
+    <div class="slogan">
+        <h2>RENEW YOUR BODY</h2>
+        <p class="txt-en">A NEW WAT TO CHANGE YOUR FITNESS LIFE</p>
+        <p class="txt-cn">全方位引力自重訓練課程</p>
+    </div>
     <div class="button-nav">
         <a href="#">會員課程預約</a>
         <a href="#" class="free-test">免費體能測試</a>
