--- a/modules/html/nav/nav.html
+++ b/modules/html/nav/nav.html
@@ -2,11 +2,18 @@
     <div class="nav-bg"></div>
     <div class="layout-row">
         <a class="logo">RENEW</a>
-        <ul>
+        <ul class="nav-ul">
             <li><a href="#home-section" class="nav-home">首頁</a></li>
             <li><a href="#about-section" class="nav-about">關於我們</a></li>
-            <li><a href="#course-section" class="nav-course">訓練課程</a></li>
+            <li><a href="#course-section" class="nav-course">課程訓練</a></li>
             <li><a href="#contact-section" class="nav-contact">聯系我們</a></li>
         </ul>
+
+        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
     </div>
 </nav>
