--- a/modules/html/home/home/home.html
+++ b/modules/html/home/home/home.html
@@ -5,7 +5,7 @@
         <p class="txt-cn">全方位引力自重訓練課程</p>
     </div>
     <div class="button-nav">
-        <a href="#">會員課程預約</a>
+        <a href="#" class="reserve-btn">會員課程預約</a>
         <a href="#" class="free-test">免費體能測試</a>
     </div>
     <div class="mouse"></div>
